GRAD-21: Define API response (#8)
